Content updates per Shane.

--- a/resources/html/extreme-weather.html
+++ b/resources/html/extreme-weather.html
@@ -165,7 +165,7 @@
                         </p>
                         <div class="line yellow small line-center"></div>
                         <p class="text-center">
-                            Principle Investigator
+                            Principal Investigator
                         </p>
                     </div>
                 </div>
