--- a/resources/html/forecast-tools.html
+++ b/resources/html/forecast-tools.html
@@ -8,14 +8,11 @@
         <div class="container mb-5">
             <h1 class="display-4">Forecast Tools</h1>
             <p class="subtitle text-center">
-                Forecasting wildfire activity in California to inform the operation of a safe and reliable electric grid
+                Forecasting wildfire activity in California and beyond
             </p>
             <div class="line gray line-center"></div>
             <p>
-                Situational awareness of hazardous fire conditions and the potential impacts of wildfire, both to and from the electric grid, is vital to maintain infrastructure integrity. Electric utilities rely on timely and actionable intel to mitigate fire risk, yet there are numerous barriers to accessing information: current wildfire science and technology is fragmented and limited, and software is either unable to function at scale or hidden in a black box behind a paywall.
-            </p>
-            <p>
-                The Pyregence Consortium provides free and open source access to software tools and data backed by a fire and risk forecasting system specifically developed for use by California’s electric utilities. A web-based, interactive interface displays forecasts for active fires, fire weather, and fire risk at a seven-day horizon. A user-selected output data structure allows for flexible integration with existing workflows to assist decision-making for fire and ignition risk mitigation, thus reducing losses and enhancing grid safety and reliability.
+                During wildfires, situational awareness is vital to maintain electric utility infrastructure. The Pyregence Project will provide free and open source access to data, model outputs and web-based risk forecasting tools that are based on the state of wildfire science. This fire activity and risk forecasting system has been in development over the last decade and through the Pyregence Project will be made available to wildfire practitioners. The Pyregence web-based, interactive interface displays forecasts for active fires and fire risk at a five-day horizon. An API allows for flexible integration with an organization’s unique and existing workflows to assist in tactical fire and ignition risk decision-making.
             </p>
         </div>
     </header>
@@ -52,7 +49,7 @@
                     <div class="prod p-4 my-3">
                         <img class="mb-3" src="images/icons/computer-icon@2x.jpg" alt="Computer icon">
                         <p class="text-center">
-                            Web-platform to view active fire forecasts, 0 to 7 day fire probability and de-energization metrics from multiple wildfire models
+                            Web-platform to view active fire forecasts, 5 day fire probability and de-energization metrics from multiple wildfire models
                         </p>
                     </div>
                 </div>
@@ -60,7 +57,7 @@
                     <div class="prod p-4 my-3">
                         <img class="mb-3" src="images/icons/map-icon-2@2x.jpg" alt="Map icon">
                         <p class="text-center">
-                            Enhancement of current wildfire models (Elmfire/GridFire) to include fire in the WUI, coupled fire-weather dynamics, spotting, amongst others
+                            Enhancement of current wildfire models (Elmfire/GridFire) to include fire in the WUI, coupled fire-weather dynamics, suppression, amongst others
                         </p>
                     </div>
                 </div>
