--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-md-9">
                     <h1 class="title text-white">
-                        Free and open access to the next generation of wildfire risk models for grid resiliency
+                        Free and open access to the next generation of wildfire forecast models
                     </h1>
                 </div>
                 <div class="col-md-7">
@@ -37,7 +37,7 @@
                                     <h3 class="text-center">Extreme Weather</h3>
                                     <div class="yellow-line small my-3"></div>
                                     <p class="text-center">
-                                        Determining weather conditions and other factors associated with large wildfires in the past
+                                        Determining weather conditions and other factors associated with large wildfires in the past and where to locate weather monitoring stations.
                                     </p>
                                     <div class="text-center readmore mt-auto">
                                         <a href="/extreme-weather">Read More<img src="images/arrow-right-solid.png"></a>
@@ -56,7 +56,7 @@
                                     <h3 class="text-center">Fire Behavior</h3>
                                     <div class="yellow-line small my-3"></div>
                                     <p class="text-center">
-                                        Advancing research on fuel mapping and fire spread to inform next generation wildfire models
+                                        Advancing science on fuel mapping and fire spread to inform next generation wildfire models.
                                     </p>
                                     <div class="text-center readmore mt-auto">
                                         <a href="/fire-behavior">Read More <img src="images/arrow-right-solid.png"></a>
@@ -80,7 +80,7 @@
                                     <h3 class="text-center">Forecast Tools</h3>
                                     <div class="yellow-line small my-3"></div>
                                     <p class="text-center">
-                                        Forecasting wildfire activity in California to inform the operation of a safe and reliable electric grid
+                                        Forecasting wildfire activity in California and elsewhere.
                                     </p>
                                     <div class="text-center readmore mt-auto">
                                         <a href="/forecast-tools">Read More<img src="images/arrow-right-solid.png"></a>
@@ -99,7 +99,7 @@
                                     <h3 class="text-center">Scenario Analyses</h3>
                                     <div class="yellow-line small my-3"></div>
                                     <p class="text-center">
-                                        Analyzing wildfire scenarios under climate change to inform planning for a resilient electric grid
+                                        Analyzing wildfire scenarios under climate change to inform planning for a resilient electric grid.
                                     </p>
                                     <div class="text-center readmore mt-auto">
                                         <a href="/scenario-analyses">Read More<img src="images/arrow-right-solid.png"></a>
@@ -126,12 +126,12 @@
         <div class="row justify-content-center">
             <div class="col-md-6 px-4">
                 <p class="text-justify">
-                    Wildfire threats in California are ever increasing with substantial changes in fire behaviour driven by higher fuel loads, more frequent extreme weather events and continued human development in the wildland urban interface. Organizations across the State need better operational and strategic information to understand changing wildfire risks and implement effective protection and adaptation measures. Access to this critical information is blocked by multiple barriers including fragmented silos of science and technology and black box software often behind paywalls.
+                    Wildfire threats are ever increasing with substantial changes in fire behaviour driven by higher fuel loads, more frequent extreme weather events and continued human development in the wildland urban interface. Organizations need better operational and strategic information to understand changing wildfire risks and implement effective protection and adaptation measures. Access to this critical information is blocked by multiple barriers including fragmented silos of science and technology and black box software.
                 </p>
             </div>
             <div class="col-md-6 px-4">
                 <p class="text-justify">
-                    The Pyregence Consortium aims to provide free and open source access to operational and strategic wildfire information based on the next generation of wildfire models. At an operational level, the consortium implements best practice science and technology to forecast wildfire activity for electric utilities. At a strategic level, wildfire scenario analyses will be produced to inform future wildfire risk and California’s 5th Climate Change Assessment. The ‘open source’ collaboration brings together initiatives and leading researchers from 18 institutions representing industry, academia, and government in an effort to transform how wildfire mitigation and adaptation measures are implemented across the State.
+                    The Pyregence Consortium provides free and open source access to operational and strategic wildfire information based on the next generation of wildfire models. At an operational level, the consortium implements best practice science and technology to forecast wildfire activity. At a strategic level, wildfire scenario analyses will be produced to inform future wildfire risk and California’s 5th Climate Change Assessment. The ‘open source’ collaboration brings together initiatives and leading researchers from 18 institutions representing industry, academia, and government in an effort to transform how wildfire mitigation and adaptation measures are implemented.
                 </p>
             </div>
         </div>
@@ -169,7 +169,7 @@
                     <h3 class="text-white">Advance Wildfire Science</h3>
                     <div class="white-line my-3"></div>
                     <p class="text-white">
-                        Current fire models fail to address the fundamental physics behind contemporary wildfire events in the State of California. This team aims to deliver fundamental scientific advances to give rise to the next generation of wildfire models, including a new fuel mapping technique and fire spread model based on fire physics.
+                        Current fire models fail to address the fundamental physics behind contemporary wildfire events. This team aims to deliver fundamental scientific advances to give rise to the next generation of wildfire models, including a new fuel mapping technique and fire spread model based on fire physics.
                     </p>
                 </div>
                 <div class="col-md-3 text-center">
@@ -190,7 +190,7 @@
                     <h3 class="text-white">Wildfire Forecasts</h3>
                     <div class="white-line my-3"></div>
                     <p class="text-white">
-                        Electric utilities face numerous barriers to access operational information to mitigate wildfire risk. Current wildfire science and technology is fragmented and software is either unable to function at scale or hidden in a black box behind a paywall. The Pyregence Consortium provides electric utilities with free and open source access to software tools for forecasting wildfire activity in California to inform the operation of a safe and reliable electric grid
+                        Electric utilities and other organizations face numerous barriers to access operational information to mitigate wildfire risk. Current wildfire science and technology is fragmented and software is either unable to function at scale or hidden in a black box. The Pyregence Consortium provides electric utilities and others with free and open source access to software tools for forecasting wildfire activity.
                     </p>
                 </div>
                 <div class="col-md-3 text-center">
@@ -211,7 +211,7 @@
                     <h3 class="text-white">Wildfire Scenarios</h3>
                     <div class="white-line my-3"></div>
                     <p class="text-white">
-                        California is faced with a challenging ‘new normal’: an increased risk of megafires potentially resulting in catastrophic impacts to society over the coming century. The Pyregence consortium will develop wildfire scenarios under a changing climate to inform climate mitigation and adaptation planning for a more safe, cost-effective, reliable and resilient electric utility grid
+                        We are faced with a challenging ‘new normal’: an increased risk of megafires potentially resulting in catastrophic impacts to society over the coming century. The Pyregence consortium will develop wildfire scenarios under a changing climate to inform climate mitigation and adaptation planning for a more safe, cost-effective, reliable and resilient electric utility grid
                     </p>
                 </div>
                 <div class="col-md-3 text-center">
@@ -227,7 +227,7 @@
                     Pyregence Consortium
                 </h2>
                 <p class="subtitle text-center">
-                    The ‘open source’ collaboration brings together initiatives and researchers from 18 institutions representing industry, academia, and government to support how wildfire risk mitigation and adaptation is implemented across California.
+                    Our collaboration has combined initiatives and researchers from 18 institutions representing industry, academia, and government to support how wildfire risk is forecasted, and when and where mitigation and adaptation is implemented.
                 </p>
             </div>
         </div>
@@ -347,7 +347,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <p class="text-white text-justify">
-                        The Pyregence Consortium is committed to transparency and reproducibility throughout our systems because we recognize these as necessary ingredients for successful science-based decision making. No one trusts a black box, and that is why all of our software from our weather pipeline and high performance fire forecast models to our dynamic web interface is being developed and released under the strongest open source license currently available: the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU General Public License version 3 (GPLv3)</a>. The GPLv3 software license ensures that any contributions to Pyregence's tools will remain in the open source domain indefinitely and may be reused and improved upon by the next generation of modelers, programmers, and fire scientists.
+                        The Pyregence Consortium is committed to transparency and reproducibility throughout our systems because we recognize these as necessary ingredients for successful science-based decision making. No one should trust a black box, and that is why all of our software from our weather pipeline and high performance fire forecast models to our dynamic web interface is being developed and released under the strongest open source license currently available: the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU General Public License version 3 (GPLv3)</a>. The GPLv3 software license ensures that any contributions to Pyregence's tools will remain in the open source domain indefinitely and may be reused and improved upon by the next generation of modelers, programmers, and fire scientists.
                     </p>
                     <div class="d-flex justify-content-center py-3">
                         <a href="https://github.com/pyregence" class="btn border-yellow text-white text-center">Github</a>
@@ -364,7 +364,7 @@
                     <div class="yellow-line small my-3"></div>
                     <h4>Disclaimer</h4>
                     <p class="text-justify">
-                        The Pyregence project is sponsored by the California Energy Commission. It does not necessarily represent the views of the Energy Commission, its employees, or the State of California. Neither the Commission, the State of California, nor the Commission's employees, contractors, or subcontractors makes any warranty, express or implied, or assumes any legal liability for the information in this document; nor does any party represent that the use of this information will not infringe upon privately owned rights.
+                        The Pyregence project is sponsored in large part by the California Energy Commission. It does not necessarily represent the views of the Energy Commission, its employees, or the State of California. Neither the Commission, the State of California, nor the Commission's employees, contractors, or subcontractors makes any warranty, express or implied, or assumes any legal liability for the information in this document; nor does any party represent that the use of this information will not infringe upon privately owned rights. Forecast Tools are open source, offered as-is, without warranty and liability for damages is expressly disclaimed. At this time, the Forecast Tools are under development and should not be relied on for any fire-safety decision.
                     </p>
                 </div>
                 <div class="col-md-6 px-4">
