--- a/resources/html/team.html
+++ b/resources/html/team.html
@@ -3,7 +3,7 @@
         <div class="container d-flex">
             <div class="row align-items-center my-5">
                 <div class="col-md-12 my-5">
-                    <h1>Pyregence Team</h1>
+                    <h1>Pyregence Teams and Committees</h1>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-md-6">
                     <h3 class="text-center">Technical Advisory Committee</h3>
-                    <p class="text-center">An independent advisory committee composed of professionals from utilities, state and federal research and emergency management agencies charged with providing project guidance and advisory product review.</p>
+                    <p class="text-center">An independent advisory committee composed of professionals from utilities, state and federal research and emergency management agencies are charged with providing project guidance and advisory product review.</p>
                 </div>
             </div>
         </div>
@@ -194,7 +194,40 @@
                         </div>
                     </div>
                 </div><!--end .team-block anderson-->
-                <div class="col-sm-6 mb-3 team-block f-pl">
+                <div class="col-sm-6 mb-3 team-block f-sa">
+                    <div class="row">
+                        <div class="col-md-4 col-sm-12">
+                            <a href="#" data-featherlight="#maxwell">
+                                <img class="headshot mb-3" src="images/team/charles-maxwell.jpg" alt="Charles Maxwell, PhD">
+                            </a>
+                        </div>
+                        <div class="col-md-8 col-sm-12">
+                            <h3><a href="#" data-featherlight="#baldwin">Charles Maxwell, PhD</a></h3>
+                            <p class="role mb-0">Forest Ecosystem Modeler</p>
+                            <p>Spatial Informatics Group</p>
+                            <a class="btn learn-more" href="#" data-featherlight="#maxwell">Learn More</a>
+                            <div class="lightbox" id="maxwell">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-sm-3">
+                                            <img class="headshot mb-3" src="images/team/charles-maxwell.jpg" alt="Charles Maxwell, PhD">
+                                        </div>
+                                        <div class="col-sm-9">
+                                            <h2>Charles Maxwell, PhD</h2>
+                                             <p class="role mb-0">Forest Ecosystem Modeler</p>
+                                             <p>Spatial Informatics Group</p>
+                                             <div class="line yellow"></div>
+                                             <p>
+                                                 Charles' role in the project is to lead the development and implementation of vegetation scenarios (fuels management and drought dieback) such that they can feed into the different long-term wildfire projection modeling frameworks. Charles Maxwell received his PhD from North Carolina State and was a National Science Foundation IGERT Fellow. His interests are in applied forest management, with a focus on the provision of ecosystem services provided by forested landscapes. Particular research interests include understanding the links between forest recreation and climate change, both through the direct impact of changing weather and the indirect impact through changing forest composition. Charles studied Environmental Economics and Policy and Forest Resource Management at Duke University; Economics and Environmental Studies at Wake Forest University; and has worked with state and federal agencies in various capacities for forest conservation.
+                                             </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--end .team-block maxwell--> 
+                <div class="col-sm-6 mb-3 team-block f-fb f-pl f-it">
                     <div class="row">
                         <div class="col-md-4 col-sm-12">
                             <a href="#" data-featherlight="#battles">
@@ -235,7 +268,7 @@
                             </a>
                         </div>
                         <div class="col-md-8 col-sm-12">
-                            <h3><a href="#" data-featherlight="#carr">Kim Carr</a></h3>
+                            <h3><a href="#" data-featherlight="#carr">Kim Carr, M.A.</a></h3>
                             <p class="role mb-0">Senior Scientist</p>
                             <p>Spatial Informatics Group</p>
                             <a target="_blank" href="https://www.linkedin.com/in/kim-carr-a9a921a/"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a>
@@ -247,7 +280,7 @@
                                             <img class="headshot mb-3" src="images/team/kim-carr.jpg" alt="Kim Carr">
                                         </div>
                                         <div class="col-sm-9">
-                                            <h2>Kim Carr <a target="_blank" href="https://www.linkedin.com/in/kim-carr-a9a921a/"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a></h2>
+                                            <h2>Kim Carr, M.A. <a target="_blank" href="https://www.linkedin.com/in/kim-carr-a9a921a/"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a></h2>
                                              <p class="role mb-0">Senior Scientist</p>
                                              <p>Spatial Informatics Group</p>
                                              <div class="line yellow"></div>
@@ -303,7 +336,7 @@
                             </a>
                         </div>
                         <div class="col-md-8 col-sm-12">
-                            <h3><a href="#" data-featherlight="#darlington">Christiana Darlington</a></h3>
+                            <h3><a href="#" data-featherlight="#darlington">Christiana Darlington, JD</a></h3>
                             <p class="role mb-0">Project Attorney</p>
                             <p>Clere, Inc.</p>
                             <a target="_blank" href="https://www.linkedin.com/in/christiana-darlington-5000799/"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a>
@@ -315,7 +348,7 @@
                                             <img class="headshot mb-3" src="images/team/christiana-darlington.jpg" alt="Christiana Darlington">
                                         </div>
                                         <div class="col-sm-9">
-                                            <h2>Christiana Darlington <a target="_blank" href="https://www.linkedin.com/in/christiana-darlington-5000799/"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a></h2>
+                                            <h2>Christiana Darlington, JD <a target="_blank" href="https://www.linkedin.com/in/christiana-darlington-5000799/"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a></h2>
                                              <p class="role mb-0">Project Attorney</p>
                                              <p>Clere, Inc.</p>
                                              <div class="line yellow"></div>
@@ -970,7 +1003,7 @@
                         </div>
                     </div>
                 </div><!--end .team-block saah-->
-                <div class="col-sm-6 mb-3 team-block f-fb f-ft f-sa">
+                <div class="col-sm-6 mb-3 team-block f-fb f-ft">
                     <div class="row">
                         <div class="col-md-4 col-sm-12">
                             <a href="#" data-featherlight="#scott">
@@ -1197,7 +1230,7 @@
                                              <p>UC Merced</p>
                                              <div class="line yellow"></div>
                                              <p>
-                                                 Leroy is the leader of the Scenario Analysis Workgroup (#4). He is responsible for leading the development and assessment of statistical wildfire models and their coupling with other dynamic vegetation and land surface models. Leroy conducts independent and collaborative research on the drivers of extreme wildfire seasons in the historic record using documentary and remotely sensed fire history data. He applies this research to build statistical and coupled statistical and dynamical models of wildfire activity for seasonal forecasts, climate change assessments, and paleofire reconstructions. Extensions of this work estimate effects of historic and simulated wildfires on ecosystem composition, carbon storage, pollution emissions, endangered species habitat suitability, and wildfire suppression costs and property losses.
+                                                 Leroy is the leader of the Scenario Analysis Workgroup (#4). He is responsible for leading the development and assessment of statistical wildfire models and their coupling with other dynamic vegetation and land surface models. Leroy conducts independent and collaborative research on the drivers of extreme wildfire seasons in the historic record using documentary and remotely sensed fire history data. He applies this research to build statistical and coupled statistical and dynamical models of wildfire activity for seasonal forecasts, climate change assessments, and paleofire reconstructions. Extensions of this work estimate effects of historic and simulated wildfires on ecosystem composition, carbon storage, pollution emissions, endangered species habitat suitability, and wildfire suppression costs and property losses. Dr. Westerling holds a B.A. from the University of California, Los Angeles; and a Ph.D. from the University of California, San Diego. Prior to UC Merced, he was a research scientist at Scripps Institution of Oceanography. He has published extensively on wildfire and climate in the western United States.
                                              </p>
                                         </div>
                                     </div>
