minor changes to team page and addition of Tools nav link

--- a/resources/html/~header.html
+++ b/resources/html/~header.html
@@ -31,6 +31,9 @@
                         <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-data" class="nav-item">
                             <a href="/data" class="nav-link">data</a>
                         </li>
+                        <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-data" class="nav-item">
+                            <a href="/near-term-forecast" class="nav-link">tools</a>
+                        </li>
                         <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-team" class="nav-item">
                             <a href="/team" class="nav-link">team</a>
                         </li>
