Text edits per Shane.

--- a/resources/html/forecast-tools.html
+++ b/resources/html/forecast-tools.html
@@ -21,14 +21,14 @@
             <div class="row">
                 <div class="col-md-8">
                     <h2 class="display-4">
-                        Pyregence Tools
+                        Pyregence Near-term Forecasting Tools
                     </h2>
                     <p class="mb-5">
-                        Electric utilities currently use fire models that are based on dated wildfire science. PRC is providing free and open source access to cutting-edge wildfire science and tools that provide for timely and accurate forecasts of wildfire spread and potential impacts to the electric utility grid and communities.
+                        Electric utilities currently use fire models that are based on dated wildfire science. The Pyregence Project is providing free and open source access to cutting-edge wildfire science and tools that provide for timely and accurate forecasts of wildfire spread and potential impacts to the electric utility grid and communities.
                     </p>
-                    <h3>Goals</h3>
+                    <h3>Goal</h3>
                     <p class="subtitle my-1">
-                        Develop the next generation of models to provide near-term risk forecasts at a 0-to-7-day temporal scale and at a fine (circa 30m) spatial scale to simulate spread of extant fire ignitions and enhance current models with best practice in wildfire risk modeling.
+                        Develop the next generation of models to provide near-term risk forecasts at a 0-to-5 day temporal scale and at a fine (circa 30m) spatial scale to simulate spread of extant fire ignitions and enhance current models with best practice in wildfire risk modeling.
                     </p>
                     <hr>
                     <p class="subtitle my-1">
@@ -49,7 +49,7 @@
                     <div class="prod p-4 my-3">
                         <img class="mb-3" src="images/icons/computer-icon@2x.jpg" alt="Computer icon">
                         <p class="text-center">
-                            Web-platform to view active fire forecasts, 5 day fire probability and de-energization metrics from multiple wildfire models
+                            Web-platform to view active fire forecasts, 0 to 5 day fire probability and de-energization metrics from multiple wildfire models
                         </p>
                     </div>
                 </div>
