--- a/resources/html/scenario-analyses.html
+++ b/resources/html/scenario-analyses.html
@@ -64,7 +64,7 @@
                     <div class="prod p-4 my-3">
                         <img class="mb-3" src="images/icons/trees-icon@2x.jpg" alt="Trees icon">
                         <p class="text-center">
-                            Enhancements of projections to address wildfire in the WUI, drought and tree mortality, improved spatial scale, ingestion of new climate projections
+                            Enhancements of wildfire activity projections to address wildfire in the WUI, drought and tree mortality, improved spatial scale, ingestion of new downscaled climate projections
                         </p>
                     </div>
                 </div>
