--- a/resources/html/team.html
+++ b/resources/html/team.html
@@ -3,7 +3,7 @@
         <div class="container d-flex">
             <div class="row align-items-center my-5">
                 <div class="col-md-12 my-5">
-                    <h1>Pyregence Teams and Committees</h1>
+                    <h1>Teams</h1>
                 </div>
             </div>
         </div>
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 px-4">
-                    <h3>About Us</h3>
+                    <h2>About Us</h2>
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -23,7 +23,7 @@
                 </div>
                 <div class="col-md-6 px-4">
                     <p class="text-justify">
-                        Consortium partners are from leading research institutions from industry, academia, and government.
+                        Consortium partners are from leading research institutions from industry, academia, and government. The Consortium is distributed across four interconnected and focused workgroups. The workgroups are  supported by four different teams. Independent project oversight is provided by a Technical Advisory Committee.
                     </p>
                 </div>
             </div>
@@ -31,7 +31,7 @@
     </section>
     <div class="jumbotron bg-white pt-4 pb-0 mt-3">
         <div class="container">
-            <h3 class="text-center mb-5">Workgroups</h3>
+            <h2 class="text-center mb-5">Workgroups</h2>
             <div class="row study-build">
                 <div class="d-flex flex-column col-md-6 mb-4">
                     <div class="row flex-fill">
@@ -110,6 +110,7 @@
     </div>
     <section class="mb-2">
         <div class="container">
+            <h2 class="text-center mb-4">Teams</h2>
             <div class="row study-build">
                 <div class="col-md-4">
                     <h3 class="text-center">Project Administration Team</h3>
@@ -142,6 +143,7 @@
     </section>
     <div class="container line yellow full-width line-center my-5"></div>
      <section class="team">
+        <h2 class="text-center mb-4">Consortium Members</h2>
         <div class="container mb-4">
             <div id="myBtnContainer">
                 <button class="btn active" onclick="filterSelection('all')"> All</button>
@@ -387,7 +389,7 @@
                                              <p>Spatial Informatics Group</p>
                                              <div class="line yellow"></div>
                                              <p>
-                                                 Charles' role in the project is to lead the development and implementation of vegetation scenarios (fuels management and drought dieback) such that they can feed into the different long-term wildfire projection modeling frameworks. Charles Maxwell received his PhD from North Carolina State and was a National Science Foundation IGERT Fellow. His interests are in applied forest management, with a focus on the provision of ecosystem services provided by forested landscapes. Particular research interests include understanding the links between forest recreation and climate change, both through the direct impact of changing weather and the indirect impact through changing forest composition. Charles studied Environmental Economics and Policy and Forest Resource Management at Duke University; Economics and Environmental Studies at Wake Forest University; and has worked with state and federal agencies in various capacities for forest conservation.
+                                                 Charles' role in the project is to lead the development and implementation of vegetation scenarios (fuels management and drought dieback) such that they can feed into the different long-term wildfire projection modeling frameworks. Charles received his PhD from North Carolina State and was a National Science Foundation IGERT Fellow. His interests are in applied forest management, with a focus on the provision of ecosystem services provided by forested landscapes. Particular research interests include understanding the links between forest recreation and climate change, both through the direct impact of changing weather and the indirect impact through changing forest composition. Charles studied Environmental Economics and Policy and Forest Resource Management at Duke University; Economics and Environmental Studies at Wake Forest University; and has worked with state and federal agencies in various capacities for forest conservation.
                                              </p>
                                         </div>
                                     </div>
